fix: changed dropdown z-index

--- a/src/components/PrimaryDropdown/PrimaryDropdown.module.scss
+++ b/src/components/PrimaryDropdown/PrimaryDropdown.module.scss
@@ -10,6 +10,8 @@
 	border-radius: 15px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
+    z-index: 1;
+
 	.header {
 		width: 100%;
 		height: 100%;
